fix alignment

--- a/src/containers/entitysetsearch/styles.module.css
+++ b/src/containers/entitysetsearch/styles.module.css
@@ -197,6 +197,10 @@
   text-align: center;
 }
 
+.timelineContainer {
+  margin-left: -80px;
+}
+
 .timelineDate {
   font-size: 14px;
   font-weight: bold;
